--- a/zhuce.html
+++ b/zhuce.html
@@ -5,7 +5,7 @@
 	<title>注册</title>
 	<meta name="viewport" content="width=device-width,
 	initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-	<link rel="stylesheet" href="http://at.alicdn.com/t/font_913502_7y3l1n2slsv.css">
+	<link rel="stylesheet" href="https://at.alicdn.com/t/font_913502_7y3l1n2slsv.css">
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/rem.css">
 	<link rel="stylesheet" href="css/zhuce.css">
